Add EmailSender + QRCodeGenerator

--- a/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
+++ b/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\SharijhaAward.Application\SharijhaAward.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="QRCodeGenerator\" />
+  </ItemGroup>
+
 </Project>
