--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\SharijhaAward.Persistence\SharijhaAward.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pics\" />
+  </ItemGroup>
+
 </Project>
