--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.17.0" />
   </ItemGroup>
 
