--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -10,5 +10,5 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  //"Urls": "http://192.168.1.109:5050"
+  "Urls": "http://192.168.1.101:5050"
 }
