1. Add Download QRCode Api 2. Update Sending Email To Send Images With The HTML Email Body

--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -6,9 +6,15 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=war_dev_sharjahaward;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=war_dev_sharjahaward;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.105:5050"
+  "Urls": "http://192.168.1.105:5050",
+  "SMTP": {
+    "SenderEmail": "no-reply@warshatec.com",
+    "Password": "QAZwsx!@1212",
+    "Host": "mail.warshatec.com",
+    "Port": 587
+  }
 }
