--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  //"Urls": "http://192.168.1.105:5050",
+  "Urls": "http://192.168.1.103:5050",
   "SMTP": {
     "SenderEmail": "no-reply@warshatec.com",
     "Password": "QAZwsx!@1212",
