--- a/SharijhaAward.Domain/SharijhaAward.Domain.csproj
+++ b/SharijhaAward.Domain/SharijhaAward.Domain.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Aspose.PDF" Version="24.1.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="BarCode" Version="2024.2.1" />
     <PackageReference Include="ErrorOr" Version="1.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
