--- a/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
+++ b/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.PDF" Version="24.1.0" />
+    <PackageReference Include="BarCode" Version="2024.2.1" />
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
