--- a/SharijhaAward.Persistence/SharijhaAward.Persistence.csproj
+++ b/SharijhaAward.Persistence/SharijhaAward.Persistence.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.PDF" Version="24.1.0" />
+    <PackageReference Include="BarCode" Version="2024.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
@@ -28,6 +29,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharijhaAward.Application\SharijhaAward.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
