--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=war_dev_sharjahaward;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SharjahAward-stg;persist security info=True;user id=ShjAwardsPortalDbUser;password=QAZwsx!@1212;MultipleActiveResultSets=True;App=EntityFramework&quot;"
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.129:5050",
+  "Urls": "http://192.168.1.103:5050",
   "SMTP": {
     "SenderEmail": "no-reply@warshatec.com",
     "Password": "QAZwsx!@1212",
