--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SharjahAward-stg;persist security info=True;user id=ShjAwardsPortalDbUser;password=QAZwsx!@1212;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    //"DefaultConnection": "Data Source=SQL5110.site4now.net;Initial Catalog=db_aa522c_sharijahawarddb;User Id=db_aa522c_sharijahawarddb_admin;Password=QAZwsx!@1212"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=war_dev_sharjahaward;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
