--- a/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
+++ b/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="PdfSharpCore" Version="1.3.63" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
+    <PackageReference Include="Spire.Barcode" Version="7.3.2" />
   </ItemGroup>
 
   <ItemGroup>
