--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Cycle\**" />
     <Compile Remove="Features\InviteeForm\Group\NewFolder1\**" />
+    <EmbeddedResource Remove="Features\Cycle\**" />
     <EmbeddedResource Remove="Features\InviteeForm\Group\NewFolder1\**" />
+    <None Remove="Features\Cycle\**" />
     <None Remove="Features\InviteeForm\Group\NewFolder1\**" />
   </ItemGroup>
 
@@ -36,14 +39,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Cycle\Commands\CreateCycle\" />
-    <Folder Include="Features\Cycle\Commands\DeleteCycle\" />
-    <Folder Include="Features\Cycle\Commands\UpdateCycle\" />
-    <Folder Include="Features\Cycle\Queries\GetAllCycles\" />
-    <Folder Include="Features\Cycle\Queries\GetCycleById\" />
     <Folder Include="Features\Identity\Role\Command\" />
     <Folder Include="Features\Subscriber\Queries\" />
-    <Folder Include="Features\TrainingWorkshops\Queries\" />
   </ItemGroup>
 
 </Project>
