1. Add DynamicAttribute Models 2. Add DynamicAttribute Repository 3. Add CreateDynamicAttribute Feature Handler

--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -6,12 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=SQL5110.site4now.net;Initial Catalog=db_aa522c_sharijahawarddb;User Id=db_aa522c_sharijahawarddb_admin;Password=QAZwsx!@1212"
+    //"DefaultConnection": "Data Source=G3ZK7B;Initial Catalog=SharjahAward-stg;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=war_dev_sharjahaward;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.100:5050",
   "SMTP": {
     "SenderEmail": "no-reply@warshatec.com",
     "Password": "QAZwsx!@1212",
