--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -13,9 +13,10 @@
   "AllowedOrigen": "*",
   "Urls": "http://192.168.1.129:5050",
   "SMTP": {
-    "SenderEmail": "no-reply@warshatec.com",
-    "Password": "QAZwsx!@1212",
-    "Host": "mail.warshatec.com",
-    "Port": 587
+    "SenderEmail": "award.portal@spea.ae",
+    "Password": "Spea@2024",
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "EnableSsl": "True"
   }
 }
