Update DownloadTempletAsPdf API in EventController 2. Update CreatePersonalInvitee Handler

--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Folder Include="QREmailHelper\" />
     <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\HTMLCodes\" />
   </ItemGroup>
 
   <ItemGroup>
