1. Update DownloadTempletAsPdf API in EventController 2. Update CreatePersonalInviteeHandler + CreateGroupInviteeHandler + ResendEmailHandler

--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -33,6 +33,7 @@
     <Folder Include="QREmailHelper\" />
     <Folder Include="wwwroot\Images\" />
     <Folder Include="wwwroot\HTMLCodes\" />
+    <Folder Include="wwwroot\InvitationPDFFiles\" />
   </ItemGroup>
 
   <ItemGroup>
