--- a/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
+++ b/SharijhaAward.Infrastructure/SharijhaAward.Infrastructure.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="NPOI" Version="2.6.2" />
     <PackageReference Include="PdfSharpCore" Version="1.3.63" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
