--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.116:5050",
+  //"Urls": "http://192.168.1.107:5050",
   "SMTP": {
     "SenderEmail": "award.portal@spea.ae",
     "Password": "Spea@2024",
