--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -7,6 +7,8 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=G3ZK7B;Initial Catalog=SharjahAward-stg;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DefaultConnection": "Data Source=AhmadPC;Initial Catalog=war_dev_sharjahaward2;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DefaultConnection": "Integrated Security=True;Persist Security Info=False;User ID=limuser;Initial Catalog=war_dev_sharjahaward;Data Source=18-225-205-92;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=war_dev_sharjahaward;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*",
