1. Add CreateDynamicAttributesValues API in DynamicAttributeController. 2. Add (SelectPatternAsDynamicAttribute + GetAllDynamicAttributePattern + GetDynamicAttributePatternById) APIs in DynamicAttributePatternController. 3. Edit ExceptionMiddleware Class.

--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\DynamicAttributePattern\**" />
     <Compile Remove="Features\DynamicAttribute\**" />
     <Compile Remove="Features\Cycle\**" />
     <Compile Remove="Features\InviteeForm\Group\NewFolder1\**" />
+    <EmbeddedResource Remove="Features\DynamicAttributePattern\**" />
     <EmbeddedResource Remove="Features\DynamicAttribute\**" />
     <EmbeddedResource Remove="Features\Cycle\**" />
     <EmbeddedResource Remove="Features\InviteeForm\Group\NewFolder1\**" />
+    <None Remove="Features\DynamicAttributePattern\**" />
     <None Remove="Features\DynamicAttribute\**" />
     <None Remove="Features\Cycle\**" />
     <None Remove="Features\InviteeForm\Group\NewFolder1\**" />
