--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -33,6 +33,7 @@
 
 	<ItemGroup>
 		<Folder Include="QREmailHelper\" />
+		<Folder Include="wwwroot\UploadedFiles\" />
 		<Folder Include="wwwroot\GeneratedBarcode\" />
 		<Folder Include="wwwroot\Images\" />
 		<Folder Include="wwwroot\HTMLCodes\" />
