--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -52,6 +52,8 @@
     <Folder Include="Features\Identity\Role\Command\" />
     <Folder Include="Features\Subscriber\Queries\" />
     <Folder Include="Features\TermsAndConditions\Attacments\Queries\" />
+    <Folder Include="Features\TrainingWorkshops\Attacments\Commands\" />
+    <Folder Include="Features\TrainingWorkshops\Attacments\Queries\" />
   </ItemGroup>
 
 </Project>
