1. Add AddDynamicAttributeValueForSave API in DynamicAttributeController. 2. Edit AddDynamicAttributeValue API in DynamicAttributeController.

--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -33,6 +33,7 @@
 
 	<ItemGroup>
 		<Folder Include="QREmailHelper\" />
+		<Folder Include="wwwroot\DynamicFiles\" />
 		<Folder Include="wwwroot\UploadedFiles\" />
 		<Folder Include="wwwroot\GeneratedBarcode\" />
 		<Folder Include="wwwroot\Images\" />
