--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Folder Include="Features\Coordinators\Commands\DeleteCoordinator\" />
     <Folder Include="Features\Coordinators\Commands\UpdateCoordinator\" />
+    <Folder Include="Features\EducationalInstitutions\Queries\GetEducationalInstitutionsByEntityId\" />
     <Folder Include="Features\Identity\Role\Command\" />
     <Folder Include="Features\Subscriber\Queries\" />
     <Folder Include="Features\TermsAndConditions\Attacments\Queries\" />
