Add CreateArbitrator API in ArbitratorsController.

--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -49,6 +49,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Arbitrators\Commands\DeleteArbitrator\" />
+    <Folder Include="Features\Arbitrators\Commands\UpdateArbitrator\" />
+    <Folder Include="Features\Arbitrators\Queries\GetAllArbitrators\" />
+    <Folder Include="Features\Arbitrators\Queries\GetArbitratorById\" />
     <Folder Include="Features\EducationalInstitutions\Queries\GetEducationalInstitutionsByEntityId\" />
     <Folder Include="Features\Identity\Role\Command\" />
     <Folder Include="Features\Subscriber\Queries\" />
