--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -20,6 +20,7 @@
 		</PackageReference>
 		<PackageReference Include="PdfSharpCore" Version="1.3.63" />
 		<PackageReference Include="QRCoder" Version="1.4.3" />
+		<PackageReference Include="RestSharp" Version="110.2.0" />
 		<PackageReference Include="Select.HtmlToPdf.NetCore" Version="23.2.0" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
