--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="Aspose.PDF" Version="24.1.0" />
 		<PackageReference Include="BarCode" Version="2024.2.1" />
 		<PackageReference Include="DinkToPdf" Version="1.0.8" />
+		<PackageReference Include="Hangfire" Version="1.8.12" />
 		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
