--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -20,6 +20,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="NLog" Version="5.3.2" />
 		<PackageReference Include="PdfSharpCore" Version="1.3.63" />
 		<PackageReference Include="QRCoder" Version="1.4.3" />
 		<PackageReference Include="RestSharp" Version="110.2.0" />
