--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -21,6 +21,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="NLog" Version="5.3.2" />
+		<PackageReference Include="NLog.Extensions.Logging" Version="5.3.10" />
+		<PackageReference Include="NLog.Web.AspNetCore" Version="5.3.10" />
 		<PackageReference Include="PdfSharpCore" Version="1.3.63" />
 		<PackageReference Include="QRCoder" Version="1.4.3" />
 		<PackageReference Include="RestSharp" Version="110.2.0" />
@@ -37,6 +39,7 @@
 	<ItemGroup>
 		<Folder Include="QREmailHelper\" />
 		<Folder Include="wwwroot\DynamicFiles\" />
+		<Folder Include="wwwroot\Logs\" />
 		<Folder Include="wwwroot\ProfilePics\" />
 		<Folder Include="wwwroot\GeneratedBarcode\" />
 		<Folder Include="wwwroot\Images\" />
