Add Error Logging in All Controllers.

--- a/SharijhaAward.Api/NLog.config
+++ b/SharijhaAward.Api/NLog.config
@@ -13,20 +13,19 @@
 	<targets>
 		<!-- write logs to file  -->
 		<target xsi:type="File" name="UsersActionsLog"
-                fileName="${basedir}\Logs\UsersActionsLog-${shortdate}.log"
-                layout="${event-properties:TransactionId} | TimeStamp: ${longdate} | ${Custom-Layout} | LogLevel: ${uppercase:${level}} | Message: ${message}"></target>
+			fileName="C:/temp/Logs/UsersActionsLog-${shortdate}.log"
+			layout="${event-properties:TransactionId} | TimeStamp: ${longdate} | ${Custom-Layout} | LogLevel: ${uppercase:${level}} | Message: ${message}">
+		</target>
 	</targets>
-
-	<variable name="basedir" value="${basedir:default=Directory.GetCurrentDirectory()}" />
-	<variable name="TransactionId"  value="${guid}" />
 	<!-- rules to map from logger name to target -->
 	<rules>
 		<!--All logs, including from Microsoft-->
-		<logger name="*" levels="Debug , Error" writeTo="UsersActionsLog" />
+		<logger name="*" levels="Error" writeTo="UsersActionsLog" />
 
 		<!--Skip non-critical Microsoft logs and so log only own logs-->
-		<logger name="Microsoft.*" maxLevel="Info" final="true" />
+		<logger name="Microsoft.*" maxLevel="Error" final="true" />
+		
 		<!-- BlackHole without writeTo -->
-		<logger name="*" minlevel="Trace" writeTo="ownFile-web" />
+		<logger name="*" minlevel="Error" writeTo="ownFile-web" />
 	</rules>
 </nlog>
