1. Edit ChangeStatusForAssignedForm API in ArbitrationController. 2. Edit CreateArbitrationScale API in ArbitrationScalesController. 3. Edit GetAllArbitrationScales API in ArbitrationScalesController. 4. Edit Database (Edit Table (Arbitration) Add New Column (string? ReasonForRejecting)) 5. Add Migration EditTable_Arbitrations_AddNewColumn_ReasonForRejecting. 6. Edit MappingProfile Class.

--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -53,6 +53,7 @@
     <Folder Include="Features\AwardPublications\Commands\UpdateAwardPublication\" />
     <Folder Include="Features\EducationalInstitutions\Queries\GetEducationalInstitutionsByEntityId\" />
     <Folder Include="Features\Identity\Role\Command\" />
+    <Folder Include="Features\InitialArbitrationFeatures\Commands\" />
     <Folder Include="Features\Subscriber\Queries\" />
     <Folder Include="Features\TrainingWorkshops\Attacments\Queries\" />
   </ItemGroup>
