--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -38,6 +38,7 @@
 	<ItemGroup>
 		<Folder Include="QREmailHelper\" />
 		<Folder Include="wwwroot\DynamicFiles\" />
+		<Folder Include="wwwroot\InterviewAttachments\" />
 		<Folder Include="wwwroot\ProfilePics\" />
 		<Folder Include="wwwroot\GeneratedBarcode\" />
 		<Folder Include="wwwroot\Images\" />
