1. Edit AddFinalScoreToArbitratoinForFormId API in ArbitrationAuditController. 2. Edit RejectInitialArbiitrationFromArbitrationAudit API in ArbitrationAuditController. 3. Edit Database (Edit Table FinalArbitrations). 4. Add Migration EditTable_FinalArbitration_V2

--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -51,6 +51,7 @@
 
   <ItemGroup>
     <Folder Include="Features\EducationalInstitutions\Queries\GetEducationalInstitutionsByEntityId\" />
+    <Folder Include="Features\FinalArbitrationFeatures\Commands\" />
     <Folder Include="Features\Identity\Role\Command\" />
     <Folder Include="Features\Subscriber\Queries\" />
     <Folder Include="Features\TrainingWorkshops\Attacments\Queries\" />
