--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.111:5050",
+  //"Urls": "http://192.168.1.111:5050",
 
 
   //"SMTP": {
