1. Edit Database (Add Column (bool TableTypeSection) in DynamicAttributeSections Table). 2. Edit Database (Add New Table DynamicAttributeTableValue). 3. Add Migrations EditTable_DynamicAttributeSection_AddTable_DynamicAttributeTableValue and EditTable_DynamicAttributeSection_AddTable_DynamicAttributeTableValue2. 4. Edit MappingProfile Class. 5. Edit AddFinalScoreToArbitratoinForFormId API in ArbitrationAuditController. 6. Edit GetAllDynamicAttributeForDependency API in DynamicAttributeController. 7. Edit CreateNewDynamicAttributeSection API in DynamicAttributeSectionController. 8. Edit GetAllDynamicAttributeSectionsForAdd API in DynamicAttributeSectionController. 9. Edit GetAllDynamicAttributeSectionsForView API in DynamicAttributeSectionController. 10. Edit GetDynamicAttributeSectionById API in DynamicAttributeSectionController. 11. Edit GetAllCriterionsForCoordinator API in ProvidedFormController. 12. Edit AddDynamicAttributeValue API in DynamicAttributeController. 13. Edit AddDynamicAttributeValueForSave API in DynamicAttributeController. 14. Edit RejectDynamicAttributeValue API in DynamicAttributeController. 15. Edit DownloadFilesByIds API in FilesManagementController. 16. Edit GetFilePathById API in FilesManagementController. 17. Edit GetAllFilesByFilter API in FilesManagementController. 18. Edit UpdateDynamicAttributeListValue API in DynamicAttributeListValuesController.

--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -9,11 +9,12 @@
     //"DefaultConnection": "Data Source=G3ZK7B;Initial Catalog=SharjahAward-stg;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     //"DefaultConnection": "Data Source=AhmadPC;Initial Catalog=war_dev_sharjahaward2;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     //"DefaultConnection": "Integrated Security=True;Persist Security Info=False;User ID=limuser;Initial Catalog=war_dev_sharjahaward;Data Source=18-225-205-92;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=war_dev_sharjahaward;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=war_dev_sharjahaward;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "PRODConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=war_dev_sharjahaward_PROD;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.110:5050",
+  "Urls": "http://127.0.0.1:5050",
 
 
   //"SMTP": {
