--- a/SharijhaAward.Application/SharijhaAward.Application.csproj
+++ b/SharijhaAward.Application/SharijhaAward.Application.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.4.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.4.0" />
     <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="NPOI" Version="2.6.2" />
     <PackageReference Include="PdfSharpCore" Version="1.3.63" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="RestSharp" Version="109.0.1" />
