1. Add GetAllListDynamicAttributes API in DynamicAttributeController. 2. Add GetAllListAdvancedFormBuilders API in AdvancedFormBuilderController. 3. Add ChangeAdvancedFormBuilderStatus API in AdvancedFormBuilderController. 4. Add CreateNewAdvancedFormBuilder API in AdvancedFormBuilderController. 5. Add CreateVirtualTableFroSection API in AdvancedFormBuilderController. 6. Add DeleteAdvancedFormBuilder API in AdvancedFormBuilderController. 7. Add UpdateAdvancedFormBuilder API in AdvancedFormBuilderController. 8. Add GetAdvancedFormBuilderById API in AdvancedFormBuilderController. 9. Add GetAllAdvancedFormBuilderForDependency API in AdvancedFormBuilderController. 10. Add GetAllAdvancedFormBuildersBySectionId API in AdvancedFormBuilderController. 11. Add AddAdvancedFormBuilderValue API in AdvancedFormBuilderController. 12. Add AddAdvancedFormBuilderValueForSave API in AdvancedFormBuilderController. 13. Add CreateAdvancedFormBuilderListValue API in AdvancedFormBuilderListValuesController. 14. Add UpdateAdvancedFormBuilderListValue API in AdvancedFormBuilderListValuesController. 15. Add DeleteAdvancedFormBuilderListValue API in AdvancedFormBuilderListValuesController. 16. Add SelectPatternAsAdvancedFormBuilder API in AdvancedFormBuilderPatternsController. 17. Add GetAllAdvancedFormBuilderPattern API in AdvancedFormBuilderPatternsController. 18. Add GetAdvancedFormBuilderPatternById API in AdvancedFormBuilderPatternsController. 19. Add CreateAdvancedFormBuilderSection API in AdvancedFormBuilderSectionController. 20. Add DeleteAdvancedFormBuilderSection API in AdvancedFormBuilderSectionController. 21. Add ReorderAdvancedFormBuildersInsideTheSections API in AdvancedFormBuilderSectionController. 22. Add UpdateAdvancedFormBuilderSection API in AdvancedFormBuilderSectionController. 23. Add GetAdvancedFormBuilderSectionById API in AdvancedFormBuilderSectionController. 24. Add GetAllAdvancedFormBuilderSectionsForAdd API in AdvancedFormBuilderSectionController. 25. Add GetAllAdvan

--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -44,6 +44,7 @@
 		<Folder Include="wwwroot\DynamicFiles\" />
 		<Folder Include="wwwroot\InterviewAttachments\" />
 		<Folder Include="wwwroot\Logs\" />
+		<Folder Include="wwwroot\AdvancedFormsFiles\" />
 		<Folder Include="wwwroot\ProfilePics\" />
 		<Folder Include="wwwroot\GeneratedBarcode\" />
 		<Folder Include="wwwroot\Images\" />
