--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -14,21 +14,22 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.109:5050",
+  "Urls": "http://127.0.0.1:5050",
 
 
-  //"SMTP": {
-  //  "SenderEmail": "award.portal@spea.ae",
-  //  "Password": "Spea@2024",
-  //  "Host": "smtp.office365.com",
-  //  "Port": 587,
-  //  "EnableSsl": "True"
-  //},
   "SMTP": {
-    "SenderEmail": "no-reply@warshatec.com",
-    "Password": "QAZwsx!@1212",
-    "Host": "mail.warshatec.com",
+    "SenderEmail": "award.portal@spea.ae",
+    "Password": "QAZwsx!@12",
+    "Host": "smtp.office365.com",
     "Port": 587,
-    "EnableSsl": "False"
+    "EnableSsl": "true"
   }
+  //},
+  //"SMTP": {
+  //  "SenderEmail": "no-reply@warshatec.com",
+  //  "Password": "QAZwsx!@1212",
+  //  "Host": "mail.warshatec.com",
+  //  "Port": 587,
+  //  "EnableSsl": "true"
+  //}
 }
