--- a/.gitignore
+++ b/.gitignore
@@ -324,3 +324,4 @@ paket-files/
 /SharijhaAward.Persistence/obj/Debug/net8.0/SharijhaAward.Persistence.pdb
 /SharijhaAward.Persistence/obj/Debug/net8.0/SharijhaAward.Persistence.sourcelink.json
 /SharijhaAward.Persistence/obj/Debug/net8.0/ref/SharijhaAward.Persistence.dll
+/SharijhaAward.Api/wwwroot/UploadedFiles
