1. Edit GetAllFormsForArbitrationAudit API. 2. Edit UpdateAssignedFormsToArbitrator API. 3. Edit CreateFinalArbitrationScore API. 4. Edit GetAllFormsForFinalArbitration API. 5. Edit Table Interviews. 6. Add Migration EditTable_Interviews.

--- a/.gitignore
+++ b/.gitignore
@@ -325,3 +325,5 @@ paket-files/
 /SharijhaAward.Persistence/obj/Debug/net8.0/SharijhaAward.Persistence.sourcelink.json
 /SharijhaAward.Persistence/obj/Debug/net8.0/ref/SharijhaAward.Persistence.dll
 /SharijhaAward.Api/wwwroot/UploadedFiles
+/SharijhaAward.Api/wwwroot/ProvidedForm/2
+/SharijhaAward.Api/appsettings.json
