1. Edit AddFinalScoreToArbitratoinForFormId API. 2. Edit CreateArbitrationAudit API. 3. Edit RejectInitialArbiitrationFromArbitrationAudit API. 4. Edit GetAllFormsForArbitrationAudit API. 5. Edit GetArbitrationAuditByArbitrationId API. 6. Edit UpdateArbitrator API. 7. Edit Login API. 8. Add ChangeFinalArbitrationStatus API. 9. Edit CreateFinalArbitrationScore API. 10. Edit GetAllFormsForFinalArbitration API. 11. Edit ChangeArbitrationStatus API. 12. Edit CreateInitialArbitration API. 13. Edit ConfirmSelectedWinningForms API. 14. Edit SelectWinningForms API. 15. Edit GetAllWinnersDashboard API. 16. Edit GetAllWinnersForWebsite API. 17. Edit GetWinnersByLevel API. 18. Edit GetWinnersByLevelGroupedByClasses API. 19. Edit Table Arbitrations. 20. Edit Table ArbitrationAudits. 21. Edit Table FinalArbitrations. 22. Add Migration InitialCreate.

--- a/.gitignore
+++ b/.gitignore
@@ -327,3 +327,4 @@ paket-files/
 /SharijhaAward.Api/wwwroot/UploadedFiles
 /SharijhaAward.Api/wwwroot/ProvidedForm/2
 /SharijhaAward.Api/appsettings.json
+/SharijhaAward.Api/wwwroot/ProvidedForm/1
