--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,4 @@ paket-files/
 /SharijhaAward.Api/wwwroot/ProvidedForm/2
 /SharijhaAward.Api/appsettings.json
 /SharijhaAward.Api/wwwroot/ProvidedForm/1
+/SharijhaAward.Api/appsettings.json
