work on Auth MidderlWare test Filters

--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,4 @@ paket-files/
 /SharijhaAward.Api/wwwroot/ProvidedForm/1
 /SharijhaAward.Api/appsettings.json
 /SharijhaAward.Api/wwwroot/ProvidedForm/4
+/SharijhaAward.Api/wwwroot/ProvidedForm/3
