--- a/SharijhaAward.Persistence/SharijhaAward.Persistence.csproj
+++ b/SharijhaAward.Persistence/SharijhaAward.Persistence.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Aspose.PDF" Version="24.1.0" />
     <PackageReference Include="BarCode" Version="2024.2.1" />
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
