Complete Rejected Filed

--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,4 @@ paket-files/
 /SharijhaAward.Api/wwwroot/ProvidedForm/3
 /SharijhaAward.Api/wwwroot/ProvidedForm/5/c1716dc0-5ea3-4f2a-967a-a90d3a2a9f2f.pdf
 /SharijhaAward.Api/appsettings.json
+/SharijhaAward.Api/wwwroot/ProvidedForm/1002
