--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -14,7 +14,7 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.1.116:5050",
+  //"Urls": "http://192.168.1.116:5050",
 
 
   "SMTP": {
