--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,4 @@ paket-files/
 /SharijhaAward.Api/appsettings.json
 /SharijhaAward.Api/wwwroot/ProvidedForm/1002
 /SharijhaAward.Api/wwwroot/ProvidedForm
+/SharijhaAward.Api/wwwroot/DynamicFiles
