--- a/SharijhaAward.Persistence/SharijhaAward.Persistence.csproj
+++ b/SharijhaAward.Persistence/SharijhaAward.Persistence.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\SharijhaAward.Application\SharijhaAward.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
