1. Edit UpdateAssignedFormsToArbitrator API in ArbitrationController. 2. Edit CreateArbitrator API in ArbitratorsController. 3. Edit ForgetPassword API in AuthenticationController. 4. Edit SignUp API in AuthenticationController. 5. Edit CreateCoordinator API in CoordinatorController. 6. Edit UpdateDynamicAttribute API in DynamicAttributeController. 7. Edit GetAllDynamicAttributeSectionsForView API in DynamicAttributeSectionController. 8. Edit CreateEducationalEntity API in EducationalEntityController. 9. Edit DeleteEducationalEntity API in EducationalEntityController. 10. Edit UpdateEducationalEntity API in EducationalEntityController. 11. Edit GetAllHomePageData API in HomePageController. 12. Edit SendConfirmationCodeForResetPassword API in SettingsController. 13. Fix an Bug in Soft Delete Concepts.

--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -16,6 +16,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="wwwroot\AccountInfo_Template.html" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Aspose.HTML" Version="24.1.0" />
 		<PackageReference Include="Aspose.PDF" Version="24.1.0" />
 		<PackageReference Include="BarCode" Version="2024.2.1" />
