--- a/SharijhaAward.Api/appsettings.json
+++ b/SharijhaAward.Api/appsettings.json
@@ -14,15 +14,15 @@
   },
   "AllowedHosts": "*",
   "AllowedOrigen": "*",
-  "Urls": "http://192.168.0.101:5050",
+  "Urls": "http://192.168.0.105:5050",
 
 
   "SMTP": {
     "SenderEmail": "award.portal@spea.ae",
-    "Password": "QAZwsx!@12",
+    "Password": "a4O38&78#!Zz",
     "Host": "smtp.office365.com",
     "Port": 587,
-    "EnableSsl": "true"
+    "EnableSsl": "True"
   }
 
   //},
